--- a/config.toml
+++ b/config.toml
@@ -41,3 +41,8 @@ copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_
   [[params.social]]
     name = "keybase"
     url  = "https://keybase.io/thibaultlaurens"
+
+  [[params.social]]
+    name = "gitbook"
+    url  = "https://docs.tlaurens.xyz/"
+    
